Refactor Keycloak group <-> doc office mapping
RISDEV-4520
Move the mapping from code to the database